Monday, June 22, 2015 屈光辉  guanghui8827@gmail.com 
	* 添加MELPA支持

2008-04-27  Ye Wenbin  <wenbinye@gmail.com>

	* chinese-wbim-table.el: 将 chinese-wbim-wb 中的函数抽取到这个包中

2008-04-26  Ye Wenbin  <wenbinye@gmail.com>

	* chinese-wbim-wb.el (chinese-wbim-wb-add-completion): 对于增加的补全按输入码的长度排序。

	* eim.el (chinese-wbim-select-current): 如果是空码，输入空格确认后不产生空
	格。

2008-04-25  Ye Wenbin  <wenbinye@gmail.com>

	* chinese-wbim-cj.el: 增加对仓颉输入法的支持

	* chinese-wbim-wb.el (chinese-wbim-wb-add-completion): 在输入足够长 (3 个字符) 时输
	出所有补全

	* eim.el (chinese-wbim-format-page, chinese-wbim-handle-string): 如果没有查找到对应
	词条，依然要继续查找补全。

2008-03-29  Ye Wenbin  <wenbinye@gmail.com>

	* eim.el (chinese-wbim-show-tooltip): 修正 tooltip frame 位置计算。

Fri Nov  9 22:01:32 CST 2007  Ye Wenbin<wenbinye@163.com>
  * 不绑定控制字符，这样很多全局按键绑定都可以用了

Fri Nov  9 22:00:53 CST 2007  Ye Wenbin<wenbinye@163.com>
  * 增加切换英文标点和中文标点的命令

Fri Nov  9 21:59:21 CST 2007  Ye Wenbin<wenbinye@163.com>
  * 关闭五笔输入法记录历史的说明

Sat Sep 29 13:02:49 CST 2007  Ye Wenbin<wenbinye@163.com>
  * 修正 let 局部变量

2007-09-29  Ye Wenbin  <wenbinye@gmail.com>

	* eim.el: 增加版本号

Sat Sep 29 12:58:02 CST 2007  Ye Wenbin<wenbinye@163.com>
  * 为 package 增加选项，比如 chinese-wbim-wb 可以用来设置是否记录位置

Mon Sep 24 17:12:54 CST 2007  Ye Wenbin<wenbinye@163.com>
  * 修改 chinese-wbim-insert-ascii 使可以自己定义任意的按键，不用修改 punctuation list

Fri Sep 21 11:17:34 CST 2007  Ye Wenbin<wenbinye@163.com>
  * timestamp

Fri Sep 21 11:16:56 CST 2007  Ye Wenbin<wenbinye@163.com>
  * remove pychr.txt from version control

Fri Sep 21 11:15:42 CST 2007  Ye Wenbin<wenbinye@163.com>
  * Add mergepy.pl in source

Fri Sep 21 11:14:58 CST 2007  Ye Wenbin<wenbinye@163.com>
  * Fix restore narraw info for chinese-wbim-wb-save-history

Fri Sep 21 11:14:21 CST 2007  Ye Wenbin<wenbinye@163.com>
  * Add missing char for chinese-wbim-py

Fri Sep 21 11:12:42 CST 2007  Ye Wenbin<wenbinye@163.com>
  * More intelligent command for chinese-wbim-insert-ascii

Fri Sep 21 11:10:26 CST 2007  Ye Wenbin<wenbinye@163.com>