@@ -1,4 +1,4 @@
-;;; chinese-wbim-table --- Enable Wubi(五笔) Input Method in Emacs.
+;;; chinese-wbim-table.el --- Enable Wubi(五笔) Input Method in Emacs.
 
 ;; Copyright (C) 2015-2016, Guanghui Qu
 
