@@ -1,5 +1,6 @@
 Monday, June 22, 2015 屈光辉  guanghui8827@gmail.com 
 	* 添加MELPA支持
+	* Rename =eim= to =chinese-wbim=
 
 2008-04-27  Ye Wenbin  <wenbinye@gmail.com>
 
